Fix dark mode css3 (#205)
* Added slide bar for Interactive Karnaugh Map
Added header for Application of Shift Registers
moved subheader to the right of slide bar
changed text color so Boolean function is visible in dark mode

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -108,3 +108,11 @@ hr {
   background-color: $border-color;
   border: 0;
 }
+
+select, option {
+  color: $black;
+}
+
+input {
+  color: $black;
+}
